source/sass/templates/_header.scss
//=============================================================================/
//                          THE STUDIO OF ALBERT YU                            /
//=============================================================================/
//                                                                             /
//       PROJECT: albertyu.co                                                  /
//        CLIENT: Albert Yu                                                    /
//   DELIVERABLE: Website Prototype                                            /
//         CLASS: Organism                                                     /
//         TITLE: Site Header                                                  /
//                                                                             /
//=============================================================================/

// <section>
.hero {
  // height: 90vh;
  width: 95%;
  margin-left: 5%;
  // padding-top: 5%;

  @include breakpoint($tablet) {
    width: 80%;
    max-width: 66.6666666667rem; // 1200px/18
    height: 90vh;
    // height: 50vh;
    margin: 0 auto;
    // padding-top: 10%;
  }

  @include breakpoint($desktop) {
    max-width: 48.4848484848rem;
  }
}

  // <header>
  .header {
    @extend %hero-column;
    padding-top: 5%;
    padding-bottom: 4.765rem;
    // padding-top: 1.618rem;
    // margin-top: -7px;

    @include breakpoint($tablet) {
      padding-top: 10%;
    }
  }

